--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
-spring.data.elasticsearch.cluster-name=Java-Techie
-spring.data.elasticsearch.cluster-nodes=localhost:9300
+#spring.data.elasticsearch.cluster-name=my-application1
+#spring.data.elasticsearch.cluster-nodes=localhost:9200
+##spring.data.elasticsearch.properties.node.master: false
+##spring.data.elasticsearch.properties.node.data: false
+##spring.data.elasticsearch.properties.node.name: my-node
+##spring.data.elasticsearch.properties.node.attr.type: hot
+##spring.data.elasticsearch.properties.http.enabled: true
+#
+#server.port=9091
+
+pring.data.elasticsearch.cluster-name=docker-cluster
+spring.data.elasticsearch.repositories.enabled=true
+spring.data.elasticsearch.cluster-nodes=elasticsearch:9200
